# keyman

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_EN.md  build.rs
.github/workflows/: build.yml
assets/: icon.icns
crates/keyman-core/: Cargo.toml
crates/keyman-core/src/: config.rs  engine.rs  i18n.rs  lib.rs  scheme.rs  toggle.rs
crates/keyman-core/tests/: import_export_tests.rs  integration_tests.rs
crates/keyman-detect/: Cargo.toml
crates/keyman-detect/src/: detector.rs  lib.rs  monitor.rs
crates/keyman-detect/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/keyman-hook/: Cargo.toml
crates/keyman-hook/src/: event.rs  hook.rs  key.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/keyman-hook/tests/: platform_tests.rs
crates/keyman-ui/: Cargo.toml
crates/keyman-ui/src/: app.rs  lib.rs  settings.rs  status.rs
crates/keyman-ui/src/platform/: tray.rs
src/: main.rs
