[package]
name = "keyman-detect"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1"
