[package]
name = "keyman-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
keyman-core.workspace = true
keyman-hook.workspace = true
keyman-detect.workspace = true
anyhow.workspace = true
serde.workspace = true
